# gfal2

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CHANGELOG  CMakeLists.txt  DESCRIPTION  HOWTO-gfalPlugin  LICENSE  README  README.md  RELEASE-NOTES  VERSION  coverage.sh  generate_tests.sh  package_generator.sh  readme.html  setup_test_env.sh  setup_test_env_isolated.sh  sonar-project.properties
doc/: CMakeLists.txt  Doxyfile.in
doc/diagrams/: gfal_access.dia  gfal_access.dia~  gfal_open_diagram.dia  surls_get_endpoint_activity_diagram.dia
doc/examples/: Makefile  README  gfal_copy  gfal_copy.c  gfal_ls  gfal_ls.c  gfal_stat  gfal_stat.c  gfal_testchmod.c  gfal_unlink  gfal_unlink.c
doc/legacy-man/: gfal.man  gfal_abortfiles_python.man  gfal_abortrequest_python.man  gfal_access.man  gfal_chmod_python.man  gfal_close.man  gfal_close_python.man  gfal_closedir.man  gfal_creat_python.man  gfal_deletesurls.man  gfal_get.man  gfal_get_ids.man  gfal_get_ids_python.man  gfal_get_ids_setype_python.man  gfal_get_python.man  gfal_get_timeout_connect.man  gfal_get_timeout_sendreceive_python.man  gfal_get_timeout_srm_python.man  gfal_getstatus_python.man  gfal_internal_free.man  gfal_internal_free_python.man  gfal_ls_python.man  gfal_lseek.man  gfal_lseek_python.man  gfal_mkdir.man  gfal_mkdir_python.man  gfal_open.man  gfal_prestage.man  gfal_prestage_python.man  gfal_prestagestatus.man  gfal_prestagestatus_python.man  gfal_read_python.man  gfal_release_python.man  gfal_removedir.man  gfal_removedir_python.man  gfal_rename.man  gfal_request_new.man  gfal_rmdir.man  gfal_rmdir_python.man  gfal_set_ids_python.man  (+7 more)
doc/mans/: gfal2_version.1
doc/src/: API_CHANGE2.0.c  EXAMPLES.c  FAQ.c  POSIX_API.c  lib_design.c  mainpage.c
gfal_2_0_dev/testing/: CMakeLists.txt  SConscript
gfal_2_0_dev/testing/example/: gfal_testrw.c
src/: CMakeLists.txt  gfal_api.h  gfal_plugins_api.h
src/cancel/: CMakeLists.txt  gfal_cancel.c  gfal_cancel.h
src/common/: gfal_common_all.c  gfal_common_config.c  gfal_common_config.h  gfal_common_dir_handle.c  gfal_common_dir_handle.h  gfal_common_errverbose.c  gfal_common_errverbose.h  gfal_common_file_handle.c  gfal_common_file_handle.h  gfal_common_filedescriptor.c  gfal_common_filedescriptor.h  gfal_common_internal.h  gfal_common_parameter.c  gfal_common_parameter.h  gfal_common_plugin.c  gfal_common_plugin.h  gfal_common_plugin_interface.h  gfal_constants.h  gfal_prototypes.h  gfal_types.h
src/common/dcap/: README_PLUGIN_DCAP  gfal_dcap_plugin_bindings.c  gfal_dcap_plugin_bindings.h  (+4 more)
src/config/: gfal_config.c  gfal_config.h  gfal_config_internal.h
src/core/: CMakeLists.txt  gfal_api.h  gfal_plugins_api.h
src/exceptions/: cpp_to_gerror.hpp  gerror_to_cpp.cpp  gerror_to_cpp.h  gfalcoreexception.cpp  gfalcoreexception.hpp
src/fdesc/: gfal_file_handle.h
src/file/: CMakeLists.txt  gfal2_cancel.c  gfal2_checksum.c  gfal2_directory_operations.c  gfal2_read_write_file_operations.c  gfal2_standard_file_operations.c  gfal_file_api.h
src/global/: CMakeLists.txt  gfal_global.c  gfal_global.cpp  gfal_global.h  gfal_global.hpp
src/libcpp/: cpp_to_gerror.cpp  cpp_to_gerror.hpp  gerror_to_cpp.cpp  gerror_to_cpp.h  reinterpret_cast_safe.hpp
src/logger/: gfal_logger.c  gfal_logger.h
src/plugins/: CMakeLists.txt
src/posix/: gfal_posix_access.c  gfal_posix_api.h  gfal_posix_chmod.c  gfal_posix_close.c  gfal_posix_closedir.c  gfal_posix_getxattr.c  gfal_posix_internal.c  gfal_posix_internal.h  gfal_posix_listxattr.c  gfal_posix_local_file.c  gfal_posix_local_file.h  gfal_posix_lseek.c  gfal_posix_mkdir.c  gfal_posix_ng.c  gfal_posix_open.c  gfal_posix_opendir.c  gfal_posix_parameters.c  gfal_posix_read.c  gfal_posix_readdir.c  gfal_posix_readlink.c  gfal_posix_rename.c  gfal_posix_rmdir.c  gfal_posix_setxattr.c  gfal_posix_stat.c  gfal_posix_symlink.c  gfal_posix_unlink.c  gfal_posix_write.c
src/transfer/: CMakeLists.txt  corelayer.cpp  corelayer.h  gfal_cpp_wrapper.cpp  gfal_cpp_wrapper.h  gfal_transfer.h  gfal_transfer_filecopy.cpp  gfal_transfer_internal.h  gfal_transfer_params.cpp  gfal_transfer_plugins.h  gfal_transfer_types.h  gfal_transfer_types_internal.h  gfal_transfer_util.cpp  gfalmaindecorator.cpp  gfalmaindecorator.h  params_interface.hpp  params_plugin_interface.hpp  plugininterface.h
src/utils/: CMakeLists.txt  time_utils.h
src/version/: CMakeLists.txt  gfal_version.c
test/: CMakeLists.txt  Dockerfile  checksum.py  clean_directory.py  execute_tests.sh  generic_configure.sh  gfal2-tests.sh  run-in-mock.sh  srm_configure.sh  test_deployement.sh  unit_test_util.h
test/common/: CMakeLists.txt  gfal_gtest_asserts.cpp  gfal_gtest_asserts.h  gfal_lib_test.c  gfal_lib_test.h
test/conf_test/: bdii.conf  gfal2_core.conf  gsiftp_plugin.conf  lfc_plugin.conf  srm_plugin.conf
test/functional/: CMakeLists.txt  functional-test-parameters.cmake  gfal_bring_online.c  gfal_checksum_tool.c  gfal_ls.c  gfal_mkdir_full.c  gfal_mv.c  gfal_test_access.cpp  gfal_test_archive.cpp  gfal_test_bringonline.cpp  gfal_test_checksum.c  gfal_test_checksum.cpp  gfal_test_chmod.cpp  gfal_test_del.c  gfal_test_del.cpp  gfal_test_del_nonex.c  gfal_test_get.c  gfal_test_mkdir_full.c  gfal_test_mkdir_full.cpp  gfal_test_mkdir_unlink.c  gfal_test_posix.cpp  gfal_test_qos.cpp  gfal_test_readdir_full.c  gfal_test_readdir_full.cpp  gfal_test_register.cpp  gfal_test_rename.cpp  gfal_test_right_change.c  gfal_test_rmdir_full.c  gfal_test_rmdir_full.cpp  gfal_test_rw_full.c  gfal_test_rw_full.cpp  gfal_test_rw_seek.c  gfal_test_rw_seek.cpp  gfal_test_rw_seq.c  gfal_test_rw_seq.cpp  gfal_test_set_creds.c  gfal_test_set_creds.cpp  gfal_test_space.cpp  gfal_test_stat.c  gfal_test_stat.cpp  (+33 more)
test/helpers/: lfc_configure.sh  setup.sh  test_deployment.sh
test/loadtests/: gfalt_copyfile_fts_style_load_test.c
test/mock/: gfal_lfc_mock_test.h  gfal_srm_mock_test.c
test/old-gfal-tests/: test_helpers.h  unit_test_cgreen.c
test/posix/: test__gfal_posix_xattr.c
test/stress-test/: CMakeLists.txt  gfalt_copyfile_fts_style_load_test.c
test/unit/: CMakeLists.txt
(+977 files in other folders)
